--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
     id 'androidx.navigation.safeargs'
     id 'org.jlleitschuh.gradle.ktlint' version '11.0.0'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -50,11 +52,27 @@ ktlint {
 }
 
 dependencies {
-    def nav_version = "2.5.2"
+    def nav_version = "2.5.3"
+    def room_version = "2.4.3"
+
+
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    testImplementation "androidx.room:room-testing:$room_version"
+
+
+    implementation "com.google.code.gson:gson:2.9.0"
+
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
+    implementation "androidx.activity:activity-ktx:1.6.1"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
@@ -68,10 +86,15 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 
-    implementation('androidx.fragment:fragment-ktx:1.5.3')
+    implementation('androidx.fragment:fragment-ktx:1.5.4')
+
 
     testImplementation "com.google.truth:truth:1.1.3"
+}
+
+kapt {
+    correctErrorTypes true
 }
