--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tasky">
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".core.MainActivity"
             android:exported="true"
             android:theme="@style/splashScreenTheme">
             <intent-filter>
