--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,8 +91,11 @@ dependencies {
 
     implementation('androidx.fragment:fragment-ktx:1.5.5')
 
-
     testImplementation "com.google.truth:truth:1.1.3"
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
 }
 
 kapt {
