-Sets up create event in event repository -Changes get agenda item to emit agenda items before network call

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
     id 'kotlin-parcelize'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.0'
 }
 
 android {
@@ -93,6 +94,9 @@ dependencies {
     implementation('androidx.fragment:fragment-ktx:1.5.5')
 
     testImplementation "com.google.truth:truth:1.1.3"
+
+    //Kotlinx
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
 
     //Dagger-Hilt
     implementation "com.google.dagger:hilt-android:2.44"
