--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
 
     <application
         android:name=".BaseApp"
@@ -12,7 +13,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tasky">
+        android:theme="@style/Theme.App.Starting">
 
         <provider
             android:name="androidx.startup.InitializationProvider"
@@ -21,13 +22,14 @@
         </provider>
 
         <activity
-            android:name=".core.MainActivity"
+            android:name=".core.presentation.main.MainActivity"
             android:exported="true"
-            android:theme="@style/splashScreenTheme">
+            android:theme="@style/Theme.App.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".agenda.data.agenda.notifications.AgendaBroadcastReceiver" />
     </application>
 </manifest>
